Issue ANDROID-11 - Restyled app to look more like our other apps

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -47,6 +47,6 @@
 	<string name="pref_category_account">Account</string>
     <string name="pref_category_connection">Connection</string>
     <string name="pref_url_title">Yammer URL</string>
-    <string name="pref_url_summary">URL used to contact Yammer's server.</string>
+    <string name="pref_url_summary">URL used to contact Yammer\'s server.</string>
     <string name="pref_url_default">https://www.yammer.com</string>
 </resources>
