Internationalized update message.
Removed yowl & nullwire references.
Renamed classes to make code cleaner.
Localized more DEBUG flags.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -38,8 +38,10 @@
 		<item quantity="one">There is 1 new Yammer message in your network</item>
 		<item quantity="other">There are %s new Yammer messages in your network</item>
 	</plurals>
-	<string name="about_text">Yammer for Android v%s © 2009 Nullwire ApS\nhttp://nullwire.com\nsupport@nullwire.com</string>
-	<string name="about_disclaimer"> \nDisclaimer: Yammer and Nullwire logo(s) copyright © Nullwire LLC. Yammer logo(s) copyright © Yammer.com.\n\nThe Yammer enterprise microblogging service is not affiliated with or related to Nullwire in any way.</string>
+	<string name='application_update_title'>Yammer Updated</string>
+	<string name='application_update_text'>A new version of Yammer is available.</string>
+	<string name="about_text">Yammer v%s\n© 2009 Yammer, Inc.\nhttp://www.yammer.com/</string>
+	<string name="about_disclaimer"></string>
 	<string name="setting_select_active_account">Select active account</string>
 	<string name="url_icon">&#x2192;</string>
 	<string name="check_this_out">Check this out:</string>
@@ -48,5 +50,5 @@
     <string name="pref_category_connection">Connection</string>
     <string name="pref_url_title">Yammer URL</string>
     <string name="pref_url_summary">URL used to contact Yammer\'s server.</string>
-    <string name="pref_url_default">https://www.yammer.com</string>
+    <string name="pref_url_default">https://staging.yammer.com</string>
 </resources>
