--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -53,5 +53,5 @@
     <string name="pref_url_title">Yammer URL</string>
     <string name="pref_url_summary">URL used to contact Yammer\'s server.</string>
     <string name="pref_url_default">https://www.yammer.com</string>
-	<string name="updated_at_header">\'Updated at:\' h:m a M/d/yy</string>
+	<string name="updated_at_header">\'Updated at:\' hh:mm a MM/dd/yy</string>
 </resources>
