--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -49,6 +49,10 @@
 	<string name="check_this_out">Check this out:</string>
 	<string name="in_reply_to">in reply to</string>
 	
+	<string name="pref_updates_title">Updates</string>
+	<string name="pref_updates_summary">How often should the application check Yammer for new messages?</string>
+	<string name="pref_updates_options_title">Update Frequency</string>
+	
 	<string name="pref_category_account">Account</string>
     <string name="pref_category_connection">Connection</string>
     <string name="pref_url_title">Yammer URL</string>
