Ticket #ANDROID-21 - Added message click preference.
Cleaned up more code
Localized some strings.

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,4 +1,7 @@
 
+  Added message click preference (ANDROID-21)
+  More code cleanup/refactoring.
+
 2010-01-06
   Bumped versionCode for release
   More code cleanup/refactoring.
