--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -41,6 +41,7 @@
 		<item quantity="other">There are %s new Yammer messages in your network</item>
 	</plurals>
 	<string name='select_network'>Select Network</string>
+	<string name='changing_network_text'>Changing network to: %s</string>
 	<string name='select_feed'>Select Feed</string>
 	<string name='application_update_title'>Yammer Updated</string>
 	<string name='application_update_text'>A new version of Yammer is available.</string>
