--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,4 +1,9 @@
 
+2010-05-26
+  Bumped versionName 1.3.2 for release
+  Authentication flow bug fix
+  Added test plan file
+
 2010-05-24
   Bumped versionName 1.3.1 for release
   Imported trace source instead of using jars.
