--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,4 +1,10 @@
 
+2010-05-27
+  Bumped versionName 1.3.2 for release
+  Network switch bug fix
+  No feeds on first login bug fix
+  Notification bug fix
+
 2010-05-26
   Bumped versionName 1.3.2 for release
   Authentication flow bug fix
