--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -4,9 +4,10 @@
   Feed switch bug fix.
   Message reload bug fix.
     Use messages table to determine last message instead of network.last_message_id.
-  More code cleanup.
   Wrap CursorIndexOutOfBoundsException in YammerDataException
     Reload networks if we receive a YammerDataException while loading messages
+  Cannonical nework switch bug fix.
+  More code cleanup.
 
 2010-05-27
   Bumped versionName 1.3.3 for release
