--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,4 +1,9 @@
 
+2010-06-03
+  Bumped versionName to: 1.3.6
+  Models no longer throw exception when unable to insert
+  Removed duplicate last message update code
+
 2010-06-02
   Bumped versionName 1.3.5 for release
   Worked around for posting bug in OAuthClient.
