--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,6 +1,7 @@
 
 2010-06-06
   Cleaned up code in TweetListAdapter
+  Added code to clean message list before switching feeds.
 
 2010-06-03
   Bumped versionName to: 1.3.6
