--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -2,6 +2,7 @@
 2010-06-06
   Cleaned up code in TweetListAdapter
   Added code to clean message list before switching feeds.
+  Removed unused methods
 
 2010-06-03
   Bumped versionName to: 1.3.6
