--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,5 +1,6 @@
 
 2010-06-06
+  Bumped versionName to: 1.3.7
   Cleaned up code in TweetListAdapter
   Added code to clean message list before switching feeds.
   Removed unused methods
