--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -4,6 +4,7 @@
   Cleaned up code in TweetListAdapter
   Added code to clean message list before switching feeds.
   Removed unused methods
+  Fixed CalledFromWrongThreadException
 
 2010-06-03
   Bumped versionName to: 1.3.6
