--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,4 +1,8 @@
 
+2010-06-08
+  Bumped versionName to: 1.3.8
+  Fixed NPE bug under 2.1-u1
+
 2010-06-06
   Bumped versionName to: 1.3.7
   Cleaned up code in TweetListAdapter
