--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,4 +1,11 @@
 
+2010-06-15
+  Bumped versionCode for release (24)
+  Bumped versionName to: 1.3.9
+  Renamed YammerReply to YammerReplyActivity
+    Cleaned up code
+  Moved reply window to top instead of center
+
 2010-06-09
   Refactored message reply
   Moved message finding code into Message model.
